syntax = "proto3";

package proto_tc;

message Edge {
    uint64 from = 1;
    uint64 to = 2;
    double weight = 3;
}

message Graph {
    repeated Edge edges = 1;
    uint64 vertex_count = 2;
}