syntax = "proto3";

package proto_tc;

message Point {
    double x = 1;
    double y = 2;
}

message Rgba {
    uint32 red = 1;
    uint32 green = 2;
    uint32 blue = 3;
    double opacity = 4;
    bool is_rgb = 5;
}

message Color {
    oneof color {
        bool is_null = 1;
        string string_name = 2;
        Rgba rgba = 3;
    }
}